--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "src/app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.14",
     "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
   },
   "scripts": {
     "watch": "nodemon --watch \"src/\" --exec \"node src/app.js\"",
